--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,10 @@
     <!-- Authentication -->
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="repeat_password">Repeat password</string>
     <string name="log_in">Log in</string>
-    <string name="not_account">You do not have an account?</string>
     <string name="invalid_email">The email format is invalid</string>
+    <string name="not_account">You do not have an account?</string>
+    <string name="already_account">You already have an account?</string>
 
 </resources>
