--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name">Covid Contact Tracker</string>
 
     <!-- Common -->
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="decline_to_answer">Decline to answer</string>
+    <string name="confirm">Confirm</string>
     <string name="not_empty">%s cannot be empty</string>
     <string name="no_internet_title">No internet</string>
     <string name="no_internet_message">
@@ -46,5 +50,27 @@
     <string name="email_not_validated_message">
         Please check your %s inbox to verify the account.
     </string>
+
+    <!-- User info -->
+    <string name="welcome">Welcome to</string>
+    <string name="fill_information">Please fill the following fields about you</string>
+    <string name="basic_information">Basic information</string>
+    <string name="personal_information">Personal information</string>
+    <string name="COVID19_information">COVID-19 information</string>
+    <string name="select_birth_date">Select birth date</string>
+
+    <string name="username">Username</string>
+    <string name="gender">Gender</string>
+    <string name="birth_date">Birth date</string>
+    <string name="city">City</string>
+    <string name="studies">Studies</string>
+    <string name="occupation">Occupation</string>
+    <string name="marriage">Marriage</string>
+    <string name="children">Children</string>
+    <string name="being_positive">Have you been positive?</string>
+    <string name="being_vaccinated">Have you been vaccinated?</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
