--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
         There has been an unexpected error.
         Please contact the support service
     </string>
+    <string name="optional">Optional</string>
 
     <!-- Authentication -->
     <string name="email">Email</string>
@@ -83,5 +84,14 @@
     <string name="contact_networks_bottom_nav">Contact Networks</string>
     <string name="search_contact_networks_bottom_nav">Search</string>
     <string name="profile_bottom_nav">Profile</string>
+
+    <!-- Contact networks -->
+    <string name="create_contact_network_title">Create contact network</string>
+    <string name="create_contact_network_content_description">
+        @string/create_contact_network_title
+    </string>
+    <string name="contact_network_name">Name</string>
+    <string name="contact_network_password">Password</string>
+    <string name="contact_network_name_cannot_be_empty">The name cannot be empty</string>
 
 </resources>
