--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,5 +99,6 @@
         You already have a contact network with that name, please choose another one.
     </string>
     <string name="create">Create</string>
+    <string name="quit">Quit</string>
 
 </resources>
