--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,12 +81,22 @@
     <string name="being_positive">Have you been positive?</string>
     <string name="being_vaccinated">Have you been vaccinated?</string>
 
-    <!-- Main fragment -->
-    <string name="contact_networks_bottom_nav">Contact Networks</string>
-    <string name="search_contact_networks_bottom_nav">Search</string>
-    <string name="profile_bottom_nav">Profile</string>
+    <!-- Fragment names -->
+    <string name="contact_networks_fragment">Contact Networks</string>
+    <string name="search_contact_networks_fragment">Search</string>
+    <string name="profile_bottom_fragments">Profile</string>
+    <string name="create_contact_network_fragment">Create Contact Network</string>
 
     <!-- Contact networks -->
+    <string name="quit">Quit</string>
+    <string name="owner_info">Created by %s</string>
+    <string name="network_normal">Normal</string>
+    <string name="network_almost_limit">Almost limit</string>
+    <string name="network_limit">Limit</string>
+    <string name="network_over_limit">Over limit</string>
+    <string name="network_positive_detected">Positive detected</string>
+
+    <!-- Create Contact Network fragment -->
     <string name="create_contact_network_title">Create contact network</string>
     <string name="create_contact_network_content_description">
         @string/create_contact_network_title
@@ -99,13 +109,5 @@
         You already have a contact network with that name, please choose another one.
     </string>
     <string name="create">Create</string>
-    <string name="quit">Quit</string>
-    <string name="owner_info">Created by %s</string>
-    <string name="network_visible">Visible</string>
-    <string name="network_invisible">Invisible</string>
-    <string name="network_almost_limit">Almost limit</string>
-    <string name="network_limit">Limit</string>
-    <string name="network_over_limit">Over limit</string>
-    <string name="network_positive_detected">Positive detected</string>
 
 </resources>
