Add delete contact network.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,6 +126,7 @@
     <string name="enable_password_user_addition">Request password to join</string>
     <string name="access_code">Access code</string>
     <string name="access_code_generation">Generate access code</string>
+    <string name="delete_contact_network">Delete contact network</string>
 
     <!-- Search -->
     <string name="access_code_search">Access code</string>
