--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,15 +34,13 @@
     <string name="passwords_not_equals">The passwords do not match</string>
     <string name="not_account">You do not have an account?</string>
     <string name="already_account">You already have an account?</string>
-    <string name="wrong_password_title">Wrong password</string>
     <string name="wrong_password_message">
         The password you have introduced does not belong to that email.
     </string>
-    <string name="email_already_registered_title">Email already registered</string>
     <string name="email_already_registered_message">
         The email %s is already registered
     </string>
-    <string name="verify_email_title">Verify email</string>
+    <string name="verify_email_title">Verify your email</string>
     <string name="verify_email_message">An email has been sent to %s</string>
     <string name="email_not_found_title">Email not found</string>
     <string name="email_not_found_message">
@@ -97,7 +95,7 @@
     <string name="network_limit">Limit</string>
     <string name="network_over_limit">Over limit</string>
     <string name="network_positive_detected">Positive detected</string>
-    <string name="positive_button">I am positive of COVID</string>
+    <string name="positive_button">I am positive of COVID-19</string>
     <string name="positive_dialog_title">Sending positive</string>
     <string name="positive_dialog_message">
         Are you sure you want to notify the system that you are positive? Your identity will not be
@@ -146,7 +144,7 @@
     <string name="bluetooth_info_message">
         In order to detect the other users from your contact networks the bluetooth have to be
         enabled. Your identity will be private, thus anyone cannot access your phone via Bluetooth
-        and we will not send any information throughout those connections.
+        and we will not send any sensible information throughout those connections.
     </string>
     <string name="enable_bluetooth_yes">Enable Bluetooth</string>
     <string name="enable_bluetooth_no">Disable Bluetooth</string>
@@ -176,10 +174,12 @@
     <string name="log_out_title">Log out</string>
     <string name="log_out_summary">Log out and select another account</string>
     <string name="delete_account_title">Delete account</string>
-    <string name="delete_account_summary">Delete your account and all of your data</string>
     <string name="delete_account_dialog_title">Delete account</string>
     <string name="delete_account_dialog_message">
         Are you sure you want to delete your account? This action is not reversible
     </string>
+    <string name="wrong_password_title">Wrong password</string>
+    <string name="email_already_registered_title">Email already registered</string>
+    <string name="delete_account_summary">Delete your account and all of your data</string>
 
 </resources>
