--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Covid Contact Tracker</string>
 
     <!-- Common -->
-    <string name="yes">No</string>
+    <string name="yes">Sí</string>
     <string name="no">No</string>
     <string name="decline_to_answer">No quiero responder</string>
     <string name="confirm">Confirmar</string>
@@ -111,8 +111,8 @@
     <string name="bluetooth_info_title">El Bluetooth es necesareo</string>
     <string name="bluetooth_info_message">
         Con el fin de detectar los otros usuarios de sus redes de contactos es necesareo tener el
-        Bluetooth activado. Su identidad será privada i, por lo tanto, nadie tendrá acceso a su
-        dispositivo móbil a través de Bluetooth i no enviarem ningún tipo de información sensible
+        Bluetooth activado. Su identidad será privada y, por lo tanto, nadie tendrá acceso a su
+        dispositivo móbil a través de Bluetooth y no enviaremos ningún tipo de información sensible
         a través de esas connexiones.
     </string>
     <string name="enable_bluetooth_yes">Habilitar Bluetooth</string>
