Finish fixing bugs.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -131,7 +131,7 @@
     <string name="select_app_language_title">Idioma de la aplicación</string>
     <string name="select_app_language_summary">Seleccione el idioma de la aplicación</string>
     <string name="dark_theme">Temática</string>
-    <string name="about">Sobre la aplciación</string>
+    <string name="about">Sobre la aplicación</string>
     <string name="current_version">Versión actual</string>
     <string name="log_out_title">Cerrar sessión</string>
     <string name="log_out_summary">Cerrar la sesión i seleccionar otra cuenta</string>
